fix mappings and authorization tests